1 reworked ReportingSeekBar 2 added IterationsRateSeekBar, simplified IterationsSeekBar 3 added thumb_size attribute to ReportingSeekBar 4 Mandelbrot now support three rates of iteration increase/decrease, reflected in IterationsRateSeekbar

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -37,6 +37,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="39dp" />
 
+            <jetsetilly.mandelbrot.Widgets.IterationsRateSeekBar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/iterations_rate"
+                app:label="@string/settings_iterations_rate_label"
+                app:label_appearance="?android:attr/textAppearanceListItemSmall"
+                app:thumb_size="@dimen/seekbar_thumb_width_wide" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="39dp" />
+
             <jetsetilly.mandelbrot.Widgets.ReportingSeekBar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
