--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
     <declare-styleable name="ReportingSeekBar">
         <attr name="label" format="string" />
         <attr name="label_appearance" format="reference" />
+        <attr name="thumb_size" format="dimension" />
         <attr name="value_scale" format="integer" />
         <attr name="value_min" format="float" />
         <attr name="value_max" format="float" />
