--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,5 @@
 
     <dimen name="seekbar_thumb_height">20dp</dimen>
     <dimen name="seekbar_thumb_width">10dp</dimen>
+    <dimen name="seekbar_thumb_width_wide">30dp</dimen>
 </resources>
