--- a/app/src/main/res/layout/activity_palette_entry.xml
+++ b/app/src/main/res/layout/activity_palette_entry.xml
@@ -22,14 +22,16 @@
             android:layout_height="@dimen/palette_swatch_size"
             android:id="@+id/palette_swatch"
             android:src="#a8d8d6"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@string/description_palette_swatch" />
 
         <ImageView
             android:id="@+id/palette_selected_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_swatch_selected"
-            android:layout_alignEnd="@id/palette_swatch" />
+            android:layout_alignEnd="@id/palette_swatch"
+            android:contentDescription="@string/description_palette_swatch_selected" />
 
     </RelativeLayout>
 
