pinch zooming now scales the RenderCanvas ImageView itself, rather than redrawing a zoomed image. This is quicker.
we renamed the Gestures class to GestureOverlay and made it a subclass of ImageView. An instance of this class is placed in the activity_main layout. we now listen for gestures on this class rather than the RenderCanvas because the process of scaling will bugger up gesture measurements

TODO: not quite right when moving from pinch zooming to single touch. not sure why this is. also chaining of pinch-zooming/scrolling still isn't quite right.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,18 +15,22 @@
         android:id="@+id/static_background"
         android:contentDescription="@string/description_static_background" />
 
-    <view
+    <jetsetilly.mandelbrot.RenderCanvas.RenderCanvas
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        class="jetsetilly.mandelbrot.RenderCanvas.RenderCanvas"
         android:id="@+id/fractalView"
         android:cropToPadding="false"
         />
 
-    <view
+    <jetsetilly.mandelbrot.RenderCanvas.GestureOverlay
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/gesture_overlay"
+        android:contentDescription="@string/description_gesture_overlay" />
+
+    <jetsetilly.mandelbrot.ProgressView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        class="jetsetilly.mandelbrot.ProgressView"
         android:src="@mipmap/ic_progress"
         android:id="@+id/progressView"
         android:layout_gravity="end|bottom"
@@ -41,10 +45,9 @@
         android:adjustViewBounds="false"
         />
 
-    <view
+    <jetsetilly.mandelbrot.MandelbrotActionBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="jetsetilly.mandelbrot.MandelbrotActionBar"
         android:id="@+id/toolbar"
         android:layout_gravity="start|top"
         android:minHeight="?attr/actionBarSize"
