--- a/app/src/main/res/values/animation_timings.xml
+++ b/app/src/main/res/values/animation_timings.xml
@@ -7,4 +7,6 @@
     <integer name="info_pane_fade">250</integer>
     <integer name="action_bar_hide">500</integer>
     <integer name="action_bar_show">200</integer>
+    <integer name="animated_zoom_duration_fast">500</integer>
+    <integer name="animated_zoom_duration_slow">1000</integer>
 </resources>
