--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,10 @@
     <dimen name="palette_swatch_size">145dp</dimen>
 
     <dimen name="seekbar_thumb_height">20dp</dimen>
-    <dimen name="seekbar_thumb_width">10dp</dimen>
+    <dimen name="seekbar_thumb_width">20dp</dimen>
     <dimen name="seekbar_thumb_width_wide">30dp</dimen>
+
+    <dimen name="palette_settings_smoothness_padding">15dp</dimen>
+    <dimen name="palette_settings_smoothness_margin">10dp</dimen>
+    <dimen name="palette_setting_smoothness_z">5dp</dimen>
 </resources>
