--- a/app/src/main/res/values/settings_values.xml
+++ b/app/src/main/res/values/settings_values.xml
@@ -6,4 +6,6 @@
     <integer name="doubletap_max">5</integer>
     <integer name="num_passes_min">1</integer>
     <integer name="num_passes_max">4</integer>
+    <integer name="smoothness_min">1</integer>
+    <integer name="smoothness_max">12</integer>
 </resources>
