--- a/app/src/main/res/layout/dialog_iterations.xml
+++ b/app/src/main/res/layout/dialog_iterations.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <view
+    <jetsetilly.mandelbrot.Widgets.IterationsSeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        class="jetsetilly.mandelbrot.Widgets.IterationsSeekBar"
         android:id="@+id/iterations" />
 
 </LinearLayout>
