--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -121,6 +121,16 @@
                     android:text="@string/settings_rendermode_centre"
                     android:id="@+id/rendermode_centre" />
 
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp" />
+
+                <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_rendermode_hardware"
+                    android:id="@+id/rendermode_hardware" />
+
             </RadioGroup>
             <Space
                 android:layout_width="match_parent"
