--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/toolbar"
-        android:layout_gravity="start|top"
+        android:layout_gravity="top"
         android:minHeight="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:visibility="invisible" />
