--- a/app/src/main/res/animator/progress_on.xml
+++ b/app/src/main/res/animator/progress_on.xml
@@ -1,24 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android" android:ordering="sequentially">
-    <set>
-        <objectAnimator
-            android:propertyName="ActivityVisibility"
-            android:duration="250"
-            android:valueFrom="0"
-            android:valueTo="1"
-            android:valueType="floatType"
-            />
-    </set>
-
-    <set>
-        <objectAnimator
-            android:propertyName="rotation"
-            android:repeatCount="-1"
-            android:repeatMode="restart"
-            android:duration="1000"
-            android:valueFrom="0f"
-            android:valueTo="360f"
-            android:valueType="floatType"
-            />
-    </set>
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <objectAnimator
+        android:propertyName="ActivityVisibility"
+        android:duration="250"
+        android:valueFrom="0"
+        android:valueTo="1"
+        android:valueType="floatType"
+        />
 </set>
