--- a/app/src/main/res/layout/dialog_iterations.xml
+++ b/app/src/main/res/layout/dialog_iterations.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <jetsetilly.mandelbrot.Gadgets.IterationsSeekBar
+    <jetsetilly.mandelbrot.View.IterationsSeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/iterations" />
