--- a/app/src/main/res/layout/dialog_smoothness.xml
+++ b/app/src/main/res/layout/dialog_smoothness.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
-    <jetsetilly.mandelbrot.Gadgets.ReportingSeekBar
+    <jetsetilly.mandelbrot.View.ReportingSeekBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/smoothness"
