* RenderCanvas view is now a RelativeLayout view and not an ImageView     * RenderCanvas now initialises static_background and static foreground and adds those views to its own hierarchy         - more flexible than using layout XML     * RenderCanvas also initialises a fractal_canvas ImageView - which is effectively an equivalent to the old RenderCanvas     * Reworked the transformation routines to reference fractal_canvas and not the entire RenderCanvas group
 * renamed gestures_overlay to gesturesOverlay in layout XML
 * renamed info_pane to infoPane in layout XML

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,27 +9,15 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:canvas=".MainActivity">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/static_background"
-        android:contentDescription="@string/description_static_background" />
-
     <jetsetilly.mandelbrot.RenderCanvas.RenderCanvas
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fractalView" />
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/static_foreground"
-        android:contentDescription="@string/description_static_foreground" />
-
     <jetsetilly.mandelbrot.RenderCanvas.GestureOverlay
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/gesture_overlay"
+        android:id="@+id/gestureOverlay"
         android:contentDescription="@string/description_gesture_overlay" />
 
     <jetsetilly.mandelbrot.ProgressView
@@ -61,7 +49,7 @@
         android:layout_alignParentLeft="true"
         android:fontFamily="monospace"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:id="@+id/info_pane"
+        android:id="@+id/infoPane"
         android:text="Small Text"
         android:padding="7dp"
         android:background="#bbffffff"
