--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:canvas=".MainActivity">
 
-    <jetsetilly.mandelbrot.RenderCanvas.RenderCanvas
+    <jetsetilly.mandelbrot.RenderCanvas.RenderCanvas_ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fractalView" />
