--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,12 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:canvas=".MainActivity">
 
-    <jetsetilly.mandelbrot.RenderCanvas.RenderCanvas_ImageView
+    <jetsetilly.mandelbrot.RenderCanvas.ImageView.RenderCanvas_ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/fractalView" />
 
-    <jetsetilly.mandelbrot.RenderCanvas.GestureOverlay
+    <jetsetilly.mandelbrot.Gestures.GestureOverlay
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/gestureOverlay"
