* added deep_colour option. if set to false then Bitmaps use config type RGB_565 to save memory, otherwise they use ARGB_8888    - we still use ARGB_888 when we need transparency; for palette swatches and for a transient bitmap in fixateVisibleImage()

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -188,6 +188,26 @@
                     android:layout_height="wrap_content"
                     android:padding="20dp">
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                        android:text="@string/settings_deep_colour"
+                        android:id="@+id/label_deep_colour" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="15dp" />
+
+                    <Switch
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/deep_colour" />
+
+                    <Space
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/settings_card_spacing" />
+
                     <RadioGroup
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
