--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/description_gesture_icon"
         android:src="@drawable/ic_pause_black_24dp"
-        android:id="@+id/gesture_block"
+        android:id="@+id/pause_icon"
         android:visibility="invisible"
         android:elevation="@dimen/progress_view_elevation"
         android:background="@drawable/progress_background"
