--- a/app/src/main/res/animator/progress_throb.xml
+++ b/app/src/main/res/animator/progress_throb.xml
@@ -5,8 +5,8 @@
         android:repeatCount="-1"
         android:repeatMode="restart"
         android:duration="1500"
-        android:valueFrom="0f"
-        android:valueTo="360f"
+        android:valueFrom="0"
+        android:valueTo="360"
         android:valueType="floatType"
         />
 </set>
