--- a/app/src/main/res/values/animation_timings.xml
+++ b/app/src/main/res/values/animation_timings.xml
@@ -7,11 +7,8 @@
     <integer name="animated_zoom_duration_fast">500</integer>
     <integer name="animated_zoom_duration_slow">1000</integer>
 
-    <integer name="background_color_fade">2000</integer>
-
-    <integer name="transition_duration_fast">250</integer>
-    <integer name="transition_duration_normal">500</integer>
-    <integer name="transition_duration_slow">750</integer>
+    <integer name="image_fade_new">500</integer>
+    <integer name="image_fade_normalise">500</integer>
 
     <!-- palette activity -->
     <integer name="palette_selected_tick_duration">500</integer>
