--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:alpha="0"
         android:translationZ="@dimen/info_pane_z" />
 
-    <jetsetilly.mandelbrot.ProgressView
+    <jetsetilly.mandelbrot.Throbber
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
