--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,17 +12,20 @@
     <jetsetilly.mandelbrot.RenderCanvas.ImageView.RenderCanvas_ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layerType="hardware"
         android:id="@+id/fractalView" />
 
     <jetsetilly.mandelbrot.Gestures.GestureOverlay
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layerType="hardware"
         android:id="@+id/gestureOverlay"
         android:contentDescription="@string/description_gesture_overlay" />
 
     <jetsetilly.mandelbrot.MandelbrotActionBar
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layerType="hardware"
         android:id="@+id/toolbar"
         android:minHeight="?attr/actionBarSize"
         android:visibility="invisible"
@@ -32,6 +35,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="130sp"
+        android:layerType="hardware"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:fontFamily="monospace"
@@ -49,6 +53,7 @@
     <jetsetilly.mandelbrot.Throbber
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layerType="hardware"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:src="@drawable/ic_build_black_24dp"
@@ -62,6 +67,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layerType="hardware"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:contentDescription="@string/description_gesture_icon"
